# tauri_workspace_example

./: .gitignore  README.md  README.org
tauri_dotnet_example/src/: Program.cs  _Imports.razor
tauri_dotnet_example/src-tauri/: Cargo.toml  tauri.conf.json
tauri_dotnet_example/src-tauri/src/: main.rs
tauri_gps/: README.org  bun.lockb  package.json
tauri_gps/src/: App.css  App.tsx  main.tsx
tauri_gps/src-tauri/: Cargo.toml
tauri_gps/src-tauri/src/: lib.rs
tauri_gps/src/components/: DebugLogger.tsx  MockLocationButton.tsx
tauri_leptos_example/: Cargo.toml
tauri_leptos_example/src/: app.rs
tauri_leptos_example/src-tauri/: Cargo.toml  tauri.conf.json
tauri_leptos_example/src-tauri/src/: main.rs
tauri_react_example/: .gitignore  README.org  package.json  vite.config.ts
tauri_react_example/src/: App.tsx  main.tsx  routeTree.gen.ts
tauri_react_example/src-tauri/: Cargo.toml  tauri.conf.json
tauri_react_example/src-tauri/capabilities/: default.json
tauri_react_example/src-tauri/src/: lib.rs  main.rs  web.rs
tauri_react_example/src/components/: HistogramWaterfall.tsx  KLineChart.tsx  PhysicsScene.tsx  ReactThreeFiberScene.tsx  ThreeJsComparison.tsx  ThreeScene.tsx
tauri_react_example/src/routes/: __root.tsx  baidu.tsx  charts.tsx  config.tsx  data.tsx  index.tsx  r3f.tsx  rust_request.tsx  server.tsx  web-viewer.tsx
tauri_yew_example/: Cargo.toml
tauri_yew_example/src-tauri/: Cargo.toml  tauri.conf.json
tauri_yew_example/src-tauri/src/: main.rs
